--- a/lab1/q4/homepage.html
+++ b/lab1/q4/homepage.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1 style="text-align: center;">AmaZone Books</h1>
-    <a href="./text/image.html">Signup </a>
+    <a href="signup.html">Signup </a>
     <br><br>
-    <a href="background.html">Login</p>
+    <a href="login.html">Login</p>
     <br><br>
-    <a href="q1.html">email address</a>
+
 </body>
 </html>
