--- a/lab1/q1/q1.html
+++ b/lab1/q1/q1.html
@@ -11,7 +11,7 @@
 <body>
     <div style="text-align: center;padding-top: 100px;">
         <h1>Question 1</h1>
-        <a href="./text/image.html">image.html</a>
+        <a href="signup">image.html</a>
         <br><br>
         <a href="background.html">background.html</p>
         <br><br>
