--- a/lab1/q4/book.html
+++ b/lab1/q4/book.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <h1>AmaZone</h1>
+    <p>Adventures of sherlock - Arthur Conan Doyle</p>
+    <a onclick="alert('Added to cart')">Add</a>
+    <br><br>
+    <p>Adventures of sherlock 2 - Arthur Conan Doyle</p>
+    <a onclick="alert('Added to cart')">Add</a>
+    <br><br>
+    <a href="profile.html">Back</a>
+
+    
 </body>
 </html>
